--- a/app/src/main/res/layout/activity_timeline.xml
+++ b/app/src/main/res/layout/activity_timeline.xml
@@ -6,22 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TimelineActivity">
-
     <Button
         android:id="@+id/logoutBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_margin="0dp"
-        android:text="Log out!" />
+        android:text="Log out!"
+        android:layout_below="@+id/swipeContainer"/>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/logoutBtn"
-        android:layout_margin="0dp"
-        android:layout_marginBottom="139dp">
+        android:layout_height="685dp"
+        android:layout_alignParentTop="true">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvTweets"
