--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,31 +13,28 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="319dp"
         android:background="#FFFFFF"
         android:onClick="loginToRest"
+        android:layout_centerVertical="true"
+        android:id="@+id/btnLogIn"
         android:text="@string/login_label" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="159dp"
-        android:layout_marginTop="180dp"
+        android:layout_above="@id/textView"
         app:srcCompat="@drawable/ic_launcher_twitter_round" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_above="@id/btnLogIn"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="259dp"
+        android:fontFamily="@font/chonburi"
         android:text="Twitter"
         android:textColor="#FFFFFF"
         android:textSize="50sp" />
